--- a/templates/index.html
+++ b/templates/index.html
@@ -13,5 +13,13 @@
     <input type="hidden" name="method" value="id">
     <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
 </form>
+<form action="/search" method="get">
+    <input type="hidden" name="method" value="cache">
+    <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
+</form>
+<form action="/search" method="get">
+    <input type="hidden" name="method" value="cache_img">
+    <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
+</form>
 </body>
 </html>
