--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,171 @@
 <!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <title>Wenku8 Downloader</title>
+<html lang="zh-cmn-Hans"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="Cache-Control" content="no-siteapp">
+  <title>Wenku8轻小说下载器</title>
+  <link rel="stylesheet" href="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/css/mdui.css">
+<script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
+<script src="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/cos/cos-js-sdk-v5.min.js"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-88818678-1');
+    
+    $(window).scroll(function() {
+        //为了保证兼容性，这里取两个值，哪个有值取哪一个
+        //scrollTop就是触发滚轮事件时滚轮的高度
+        var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
+//        console.log("滚动距离" + scrollTop);
+        if (scrollTop > 0) {
+            $('#scrolltop').removeClass('mdui-fab-hide');
+        }
+        if (scrollTop == 0 && !$('#scrolltop').hasClass('mdui-fab-hide')) {
+            $('#scrolltop').addClass('mdui-fab-hide');
+        }
+    })
+    $('#scrolltop').addClass('mdui-fab-hide');
+</script>
+
 </head>
-<body>
-<form action="/search" method="get">
-    <input type="hidden" name="method" value="name">
-    <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
-</form>
-<form action="/search" method="get">
-    <input type="hidden" name="method" value="id">
-    <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
-</form>
-<form action="/search" method="get">
-    <input type="hidden" name="method" value="cache">
-    <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
-</form>
-<form action="/search" method="get">
-    <input type="hidden" name="method" value="cache_img">
-    <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
-</form>
+<body class="mdui-drawer-body-left mdui-appbar-with-toolbar mdui-loaded mdui-theme-primary-indigo mdui-theme-accent-pink" style="">
+<header class="mdui-appbar mdui-appbar-fixed">
+  <div class="mdui-toolbar mdui-color-theme">
+    <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"><i class="mdui-icon material-icons">menu</i></span>
+    <a href="https://lanceliang2018.github.io/" class="mdui-typo-headline mdui-hidden-xs">我的博客</a>
+    <div class="mdui-toolbar-spacer"></div>
+    <a href="https://github.com/LanceLiang2018/Wenku8ToEpub-Onlie" target="_blank" class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: '查看源代码'}">
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
+        <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5
+	c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1
+	c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4
+	c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7
+	c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5
+	c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z"></path>
+      </svg>
+    </a>
+  </div>
+</header>
+
+<div class="mdui-drawer" id="main-drawer">
+  <div class="mdui-list" mdui-collapse="{accordion: true}" style="margin-bottom: 76px;">
+    <div class="mdui-collapse-item ">
+      <div class="mdui-collapse-item-header mdui-list-item mdui-ripple">
+        <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color">near_me</i>
+        <div class="mdui-list-item-content">WENKU8TOEPUB-ONLINE</div>
+        <i class="mdui-collapse-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+      </div>
+      <div class="mdui-collapse-item-body mdui-list">
+        <a href="" class="mdui-list-item mdui-ripple">关于</a>
+      </div>
+    </div>
+  </div>
+</div>
+    
+
+<!--    这里是承载的内容-->
+<div class="mdui-container doc-container doc-no-cover">
+  <div id="contain-dist">
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="name">
+        <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="id">
+        <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="cache">
+        <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="cache_img">
+        <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
+    </form>
+      虽然不知道有谁在用这个网站...下面的内容还没有完全完成，上面这些是ok的。
+    <div class="mdui-typo">
+      <h1 class="mdui-text-color-theme">Wenku8轻小说下载器</h1>
+        <h3 class="mdui-text-color-theme">主要功能</h3>
+        <div>
+            <h4 class="mdui-text-color-theme-accent">检索书籍信息</h4>
+            <div id="wenku8-bookinfo">
+              <div class="mdui-card" id="wenku8-book-card" style="display: none; padding:20px 20px">
+                  <!-- 卡片的标题和副标题 -->
+                  <div class="mdui-card-primary">
+                    <div class="mdui-card-primary-title mdui-text-color-theme" id="wenku8-bookinfo-name">书名</div>
+                      <div class="mdui-card-primary-subtitle">ID:<span id="wenku8-bookinfo-id">0</span> 作者：<span id="wenku8-bookinfo-author">(鸽子)</span></div>
+                  </div>
+                  <!-- 书籍封面-->                  
+                  <div>
+<!--                      <img id="wenku8-bookinfo-cover" src="">-->
+                      <div id="wenku8-bookinfo-cover">
+                      </div>
+                  </div>
+                  <!-- 卡片的内容 -->
+                  <div class="mdui-card-content mdui-typo"><p id="wenku8-bookinfo-brief">简介</p></div>
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent">下载</button>
+              </div>
+            </div>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+              <label class="mdui-textfield-label">ID或者名字</label>
+              <input class="mdui-textfield-input" id="wenku8-fun1-text"/>
+            </div>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun1()">GO</button>
+            <br><br>
+            <p>输入：ID号或者小说名，显示书籍信息。</p>
+        </div>
+        <div>
+            <h4 class="mdui-text-color-theme-accent">直接下载小说</h4>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+              <label class="mdui-textfield-label">ID或者名字</label>
+              <input class="mdui-textfield-input" id="fun1"/>
+            </div>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <br><br>
+            <p>输入：ID号或者小说名，将会从网盘直接下载小说的EPUB文件。腾讯云速度保证。</p>
+        </div>
+        <div>
+            <h4 class="mdui-text-color-theme-accent">开始缓存到网盘</h4>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+              <label class="mdui-textfield-label">ID或者名字</label>
+              <input class="mdui-textfield-input" id="fun1"/>
+            </div>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <br><br>
+            <p>输入：ID号或者小说名，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
+            <p>注意：这个功能由于网站限制，在开始下载后30秒将断开连接，所以没办法下载较大的文件。大文件请下载本地软件然后下载。</p>
+        </div>
+        <div>
+            <h4 class="mdui-text-color-theme-accent">开始缓存到网盘（包含图片）</h4>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+              <label class="mdui-textfield-label">ID或者名字</label>
+              <input class="mdui-textfield-input" id="fun1"/>
+            </div>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <br><br>
+            <p>输入：ID号或者小说名，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
+            <p>注意：这个功能由于网站限制，在开始下载后30秒将断开连接，所以没办法下载较大的文件。大文件请下载本地软件然后下载。这个功能比上一个文件大小限制更大，请谨慎使用。</p>
+        </div>
+        <h3 class="mdui-text-color-theme">相关软件下载</h3>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：本地命令行软件，能够下载更大的书籍，大概速度更快。<a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
+    </div>
+</div>
+</div>
+    <br>
+
+<script src="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/js/mdui.js"></script>
+<script>var $$ = mdui.JQ;</script>
+<script src="/static/wenku8.js"></script>
+
+
+<script type="application/javascript">
+    
+</script>
 </body>
 </html>
