--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,10 @@
       </svg>
     </a>
   </div>
+    <div class="mdui-progress" id="wenku8-progress" style="display: none;">
+      <div class="mdui-progress-indeterminate"></div>
+    </div>
+
 </header>
 
 <div class="mdui-drawer" id="main-drawer">
@@ -54,28 +58,11 @@
     </div>
   </div>
 </div>
-    
+
 
 <!--    这里是承载的内容-->
 <div class="mdui-container doc-container doc-no-cover">
   <div id="contain-dist">
-    <form action="/search" method="get">
-        <input type="hidden" name="method" value="name">
-        <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
-    </form>
-    <form action="/search" method="get">
-        <input type="hidden" name="method" value="id">
-        <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
-    </form>
-    <form action="/search" method="get">
-        <input type="hidden" name="method" value="cache">
-        <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
-    </form>
-    <form action="/search" method="get">
-        <input type="hidden" name="method" value="cache_img">
-        <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
-    </form>
-      虽然不知道有谁在用这个网站...下面的内容还没有完全完成，上面这些是ok的。
     <div class="mdui-typo">
       <h1 class="mdui-text-color-theme">Wenku8轻小说下载器</h1>
         <h3 class="mdui-text-color-theme">主要功能</h3>
@@ -96,52 +83,77 @@
                   </div>
                   <!-- 卡片的内容 -->
                   <div class="mdui-card-content mdui-typo"><p id="wenku8-bookinfo-brief">简介</p></div>
-                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent">下载</button>
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_1()">下载</button>.
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_2()">离线缓存</button>.
+                  <button class="mdui-btn mdui-ripple mdui-float-right mdui-color-theme-accent" onclick="wenku8Fun1_3()">离线缓存(带图片)</button>
               </div>
             </div>
             <div class="mdui-textfield mdui-textfield-floating-label">
-              <label class="mdui-textfield-label">ID或者名字</label>
+              <label class="mdui-textfield-label">ID</label>
               <input class="mdui-textfield-input" id="wenku8-fun1-text"/>
             </div>
             <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun1()">GO</button>
             <br><br>
-            <p>输入：ID号或者小说名，显示书籍信息。</p>
+            <p>输入：ID号，显示书籍信息。</p>
         </div>
         <div>
             <h4 class="mdui-text-color-theme-accent">直接下载小说</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
               <label class="mdui-textfield-label">ID或者名字</label>
-              <input class="mdui-textfield-input" id="fun1"/>
+              <input class="mdui-textfield-input" id="wenku8-fun2-text"/>
             </div>
-            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun2()">GO</button>
             <br><br>
             <p>输入：ID号或者小说名，将会从网盘直接下载小说的EPUB文件。腾讯云速度保证。</p>
         </div>
+        <div class="mdui-card" style="padding:20px 20px">
+          <div class="mdui-card-content mdui-typo"><div id="wenku8-fun3-logs">进度显示</div></div>
+        </div>
+        <a id='wenku8-fun3-url' href="" style="display: none;">下载链接</a>
         <div>
             <h4 class="mdui-text-color-theme-accent">开始缓存到网盘</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
-              <label class="mdui-textfield-label">ID或者名字</label>
-              <input class="mdui-textfield-input" id="fun1"/>
+              <label class="mdui-textfield-label">ID</label>
+              <input class="mdui-textfield-input" id="wenku8-fun3-text"/>
             </div>
-            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun3()">GO</button>
             <br><br>
-            <p>输入：ID号或者小说名，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
+            <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
             <p>注意：这个功能由于网站限制，在开始下载后30秒将断开连接，所以没办法下载较大的文件。大文件请下载本地软件然后下载。</p>
         </div>
         <div>
             <h4 class="mdui-text-color-theme-accent">开始缓存到网盘（包含图片）</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
-              <label class="mdui-textfield-label">ID或者名字</label>
-              <input class="mdui-textfield-input" id="fun1"/>
+              <label class="mdui-textfield-label">ID</label>
+              <input class="mdui-textfield-input" id="wenku8-fun4-text"/>
             </div>
-            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme">GO</button>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun4()">GO</button>
             <br><br>
-            <p>输入：ID号或者小说名，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
+            <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容。更新完毕就会开始下载。</p>
             <p>注意：这个功能由于网站限制，在开始下载后30秒将断开连接，所以没办法下载较大的文件。大文件请下载本地软件然后下载。这个功能比上一个文件大小限制更大，请谨慎使用。</p>
         </div>
         <h3 class="mdui-text-color-theme">相关软件下载</h3>
         <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：本地命令行软件，能够下载更大的书籍，大概速度更快。<a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
     </div>
+      <div>
+        <form action="/search" method="get">
+        <input type="hidden" name="method" value="name">
+        <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="id">
+        <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="cache">
+        <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
+    </form>
+    <form action="/search" method="get">
+        <input type="hidden" name="method" value="cache_img">
+        <input class="button" type="submit" value="按ID缓存(包含图片)"><input name="search_key" type="text"><br>
+    </form>
+      这些是旧版功能，还能用。
+  </div>
 </div>
 </div>
     <br>
