--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="Cache-Control" content="no-siteapp">
   <title>Wenku8轻小说下载器</title>
-  <link rel="stylesheet" href="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/css/mdui.css">
+  <link rel="stylesheet" href="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/css/mdui.css">
 <script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/showdown/dist/showdown.min.js"></script>
-<script src="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/cos/cos-js-sdk-v5.min.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/cos/cos-js-sdk-v5.min.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -159,7 +159,7 @@
 </div>
     <br>
 
-<script src="http://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/js/mdui.js"></script>
+<script src="https://cdn-1254016670.cos-website.ap-chengdu.myqcloud.com/blog/js/mdui.js"></script>
 <script>var $$ = mdui.JQ;</script>
 <script src="/static/wenku8.js"></script>
 
