增加封面链接

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                   </div>
                   <!-- 书籍封面-->                  
                   <div>
-<!--                      <img id="wenku8-bookinfo-cover" src="">-->
+<!--                      <img id="wenku8-bookinfo-cover" src="" rel=noreferrer>-->
                       <div id="wenku8-bookinfo-cover">
                       </div>
                   </div>
