增加版权判断

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@ var _hmt = _hmt || [];
                   <!-- 卡片的标题和副标题 -->
                   <div class="mdui-card-primary">
                     <div class="mdui-card-primary-title mdui-text-color-theme" id="wenku8-bookinfo-name">书名</div>
-                      <div class="mdui-card-primary-subtitle">ID:<span id="wenku8-bookinfo-id">0</span> 作者：<span id="wenku8-bookinfo-author">(鸽子)</span> 缓存更新时间：<span id="wenku8-bookinfo-time">X</span></div>
+                      <div class="mdui-card-primary-subtitle">ID:<span id="wenku8-bookinfo-id">0</span> 作者：<span id="wenku8-bookinfo-author">(鸽子)</span> 缓存更新时间：<span id="wenku8-bookinfo-time">X</span> 版权：<span id="wenku8-bookinfo-copyright">有版权</span></div>
                   </div>
                   <!-- 书籍封面-->                  
                   <div>
