--- a/templates/index.html
+++ b/templates/index.html
@@ -140,6 +140,7 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号，显示书籍信息。ID号是打开wenku8网站后地址栏最后一个数字。比如<a target="_blank" href="https://www.wenku8.net/book/2255.htm">魔女之旅</a>的ID为<code>2255</code>。这里显示书籍信息后也可以直接下载。</p>
         </div>
+<!--
         <div>
             <h4 class="mdui-text-color-theme-accent">直接下载小说</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -150,6 +151,7 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号或者小说名，将会从缓存直接下载小说的EPUB文件。腾讯云速度保证。</p>
         </div>
+-->
         <div class="mdui-card" style="padding:20px 20px">
           <div class="mdui-card-content mdui-typo" id="wenku8-fun3-logs-outline">
 <!--              <div id="wenku8-fun3-logs">进度显示</div>-->
@@ -159,6 +161,7 @@ var _hmt = _hmt || [];
           </div>
         </div>
         <a id='wenku8-fun3-url' href="" style="display: none;">下载链接</a>
+<!--
         <div>
             <h4 class="mdui-text-color-theme-accent">开始缓存到腾讯云对象储存</h4>
             <div class="mdui-textfield mdui-textfield-floating-label">
@@ -169,6 +172,17 @@ var _hmt = _hmt || [];
             <br><br>
             <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容到缓存中，更新完毕就会返回下载链接，开始下载。</p>
             <p>注意：有上传/压缩失败的可能。如果进度显示部分没有上传文件的记录，则很可能已经失败了，请多试几次，或者使用本地软件。如果只是上传失败，则会返回临时链接，此时下载较慢，推荐使用迅雷下载或者搭个梯子。</p>
+        </div>
+-->
+        <div>
+            <h4 class="mdui-text-color-theme-accent">开始下载</h4>
+            <div class="mdui-textfield mdui-textfield-floating-label">
+              <label class="mdui-textfield-label">ID</label>
+              <input class="mdui-textfield-input" id="wenku8-fun3-text"/>
+            </div>
+            <button class="mdui-btn mdui-ripple mdui-float-left mdui-color-theme" onclick="wenku8Fun3()">GO</button>
+            <br><br>
+            <p>输入：ID号，将会从<a href="https://www.wenku8.net/index.php" target="_blank">wenku8.net</a>获取更新内容，更新完毕就会返回下载链接，开始下载。</p>
         </div>
 <!--
         <div>
@@ -216,10 +230,12 @@ var _hmt = _hmt || [];
             <input type="hidden" name="method" value="name">
             <input class="button" type="submit" value="按名字搜书"><input name="search_key" type="text"><br>
         </form>
+<!--
         <form action="/search" method="get">
             <input type="hidden" name="method" value="id">
             <input class="button" type="submit" value="按ID找书"><input name="search_key" type="text"><br>
         </form>
+-->
         <form action="/search" method="get">
             <input type="hidden" name="method" value="cache">
             <input class="button" type="submit" value="按ID缓存"><input name="search_key" type="text"><br>
