更新了本地软件！

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,9 @@ var _hmt = _hmt || [];
       <div class="mdui-collapse-item-body mdui-list">
         <a href="https://github.com/LanceLiang2018/Wenku8ToEpub-Online" class="mdui-list-item mdui-ripple">关于</a>
       </div>
+      <div class="mdui-collapse-item-body mdui-list">
+        <a href="https://lanceliang2018.github.io/" class="mdui-list-item mdui-ripple">我的博客</a>
+      </div>
     </div>
   </div>
 </div>
@@ -198,8 +201,10 @@ var _hmt = _hmt || [];
         </div>
 -->
         <h3 class="mdui-text-color-theme">相关软件下载</h3>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：本地命令行软件，能够下载更大的书籍，大概速度更快（看你的网速了）。<a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
-        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/Wenku8%E4%B8%8B%E8%BD%BD_1.1.apk">Wenku8下载.apk</a>：把这个网页转换成手机应用程序。有ID号提取功能。<br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wk8local.exe">wk8local.exe</a>：大小57MB。是本网页的本地版，没有服务器带宽限制，能够下载电子书图片，推荐下载。<br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/wenku8toepub.exe">Wenku8ToEpub.exe</a>：大小8MB。本地命令行软件，能够下载更大的书籍，但是使用不是很人性化。
+        <a href="https://github.com/LanceLiang2018/Wenku8ToEpub">→使用帮助</a><br>
+        <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/Wenku8%E4%B8%8B%E8%BD%BD_1.1.apk">Wenku8下载.apk</a>：把这个网页转换成手机应用程序。左右滑动方便找书。<br>
         <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90%E4%B8%8B%E8%BD%BD%E5%99%A8_1.2.apk">网易云音乐下载器.apk</a>：能够按单曲/歌单下载网易云vip歌曲，但是付费歌曲暂时下载不能。<br>
         <a href="https://static-1254016670.cos.ap-chengdu.myqcloud.com/%E6%96%B9%E5%AF%B8%E4%B9%8B%E9%97%B4_2.31.apk">方寸之间.apk</a>：聊天软件(笑)。有音乐下载、聊天、网盘储存等等功能。<br>
         
